Prevent horizontal scrolling on body
For some reason the image width thing is causing Firefox to want to
scroll sideways (because the image escapes the viewport bounds
pre-transform)

--- a/site/static/styles.css
+++ b/site/static/styles.css
@@ -34,6 +34,8 @@ body {
   flex-direction: column;
 
   min-height: 100vh;
+
+  overflow-x: hidden;
 }
 
 body > * {
